# outlines

./: .gitignore  .readthedocs.yaml  pyproject.toml
source/: conf.py  index.rst
source/notes/: alternatives.rst  aws.rst  browsers.rst  browsing.rst  clickhouse.rst  computer_science.rst  debian_packaging.rst  docker_swarm.rst  emacs.rst  htop.rst  idris.rst  jq.rst  load_averages.rst  make.rst  net_tools.rst  netcat.rst  procfs.rst  sed.rst  shell_scripting.rst  socat.rst  ssh.rst  zsh.rst
source/notes/clang/: README.rst
source/notes/curl/: curl.rst
source/notes/dns/: dns.rst
source/notes/git/: .git.rst  .git_annex.rst  .git_blame_bisect.rst  .git_checkout.rst  .git_conflicts.rst  .git_diff.rst  .git_logs.rst  .git_merge.rst  .git_notes.rst  .git_rebase_cherry_pick.rst  .git_remote.rst  .git_reset.rst  .git_revert.rst  .git_stacked.rst  .git_stash.rst  .git_submodule_subtree.rst  .git_tag.rst  .git_tig.rst  .git_uis.rst  .git_worktree.rst  dag  git.rst
source/notes/kubernetes/: kubernetes.rst
source/notes/nix/: .deployments.rst  .direnv.rst  .flakes.rst  .nixery.rst  .shells.rst  nix.rst
source/notes/python/: .dataclasses.rst  .decorators.rst  .immutability.rst  .parsing.rst  .types_first.rst  imports.rst  python.rst
source/notes/shell/: .argparse.rst  .functions.rst  .help.rst  .locking.rst  .logging_debugging.rst  .pitfalls.rst  .self_extracting.rst  .shebangs.rst  .traps.rst  .zsh.rst  shell.rst  template.sh
source/notes/ssh/: .signing.rst  .tunneling.rst  ssh.rst
source/notes/statistics/: .averages.rst  .basics.rst  .causal_inference.rst  (+3 more)
(+53 files in other folders)
