[tool.poetry]
name = "outlines"
version = "0.1.0"
description = ""
authors = ["lainiwa <kirrik96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbsphinx = "^0.8.7"
sphinx-autobuild = "^2021.3.14"
jupyter-sphinx = "^0.3.2"

[tool.poetry.dev-dependencies]
sphinxcontrib-spelling = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
